@@ -4,6 +4,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.when;
 import static org.skyscreamer.jsonassert.JSONAssert.assertEquals;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
@@ -19,14 +20,17 @@ import java.util.Set;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentMatchers;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.skyscreamer.jsonassert.JSONAssert;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.http.MediaType;
+import org.springframework.integration.util.CheckedCallable;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.web.bind.MethodArgumentNotValidException;
@@ -37,11 +41,11 @@ import com.apj.ecomm.product.constants.AppConstants;
 import com.apj.ecomm.product.domain.IProductService;
 import com.apj.ecomm.product.domain.model.CreateProductRequest;
 import com.apj.ecomm.product.domain.model.Paged;
-import com.apj.ecomm.product.domain.model.ProductCatalog;
 import com.apj.ecomm.product.domain.model.ProductResponse;
 import com.apj.ecomm.product.domain.model.UpdateProductRequest;
 import com.apj.ecomm.product.web.exception.RequestArgumentNotValidException;
 import com.apj.ecomm.product.web.exception.ResourceNotFoundException;
+import com.apj.ecomm.product.web.util.Executor;
 import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -66,22 +70,29 @@ class ProductControllerTest {
 	@MockitoBean
 	private IProductService service;
 
+	@MockitoBean
+	private Executor executor;
+
 	@BeforeEach
 	void setUp() throws Exception {
 		mapper.setSerializationInclusion(JsonInclude.Include.NON_NULL);
 		try (var inputStream = TypeReference.class.getResourceAsStream("/data/products.json")) {
-			response = mapper.readValue(inputStream, new TypeReference<List<ProductResponse>>() {});
+			response = mapper.readValue(inputStream, new TypeReference<List<ProductResponse>>() {
+			});
 		}
 	}
 
 	@Test
 	void productCatalog_getAll() throws Exception {
-		final var catalog = response.stream()
-			.map(product -> new ProductCatalog(product.id(), "", product.name(), product.price()))
-			.toList();
-		final var result = new Paged<>(catalog, 0, 10, 1, List.of(), catalog.size());
+		final var result = new Paged<>(response, 0, 3, 2, List.of(), response.size());
 
-		when(service.findAll(any(), any(PageRequest.class))).thenReturn(result);
+		when(service.findProductIds(any(), any(PageRequest.class))).thenReturn(List.of(1L, 2L, 3L, 4L));
+		when(service.findById(anyLong())).thenReturn(response.getFirst())
+			.thenReturn(response.get(1))
+			.thenReturn(response.get(2))
+			.thenReturn(response.getLast());
+		when(service.getPaged(ArgumentMatchers.<List<ProductResponse>>any(), any(PageRequest.class)))
+			.thenReturn(new Paged<>(new PageImpl<>(response, PageRequest.ofSize(3), response.size())));
 		final var action = mvc.perform(get(uri));
 
 		final var jsonResponse = mapper.writeValueAsString(result);
@@ -91,7 +102,7 @@ class ProductControllerTest {
 
 	@Test
 	void productCatalog_getSpecific_found() throws Exception {
-		final var productResponse = response.get(0);
+		final var productResponse = response.getFirst();
 
 		when(service.findById(anyLong())).thenReturn(productResponse);
 		final var action = mvc.perform(get(uri + "/1"));
@@ -158,10 +169,13 @@ class ProductControllerTest {
 	@Test
 	void updateProduct() throws Exception {
 		final var request = new UpdateProductRequest(null, "description", null, null, 1, BigDecimal.ONE);
-		final var existing = response.get(0);
+		final var existing = response.getFirst();
 		final var updated = new ProductResponse(1L, existing.name(), existing.shopId(), existing.shopName(),
 				request.description(), existing.images(), existing.categories(), request.stock(), request.price());
 
+		doAnswer(invocation -> invocation.<CheckedCallable<ProductResponse, RuntimeException>>getArgument(1).call())
+			.when(executor)
+			.lockFor(anyLong(), ArgumentMatchers.<CheckedCallable<ProductResponse, RuntimeException>>any());
 		when(service.update(anyLong(), anyString(), any())).thenReturn(updated);
 		final var action = mvc.perform(put(uri + "/1").header(AppConstants.HEADER_USER_ID, "SHP001")
 			.contentType(MediaType.APPLICATION_JSON)
